# MoleculaeXR

./: CMakeLists.txt  README.md  main.cpp  todo.txt
include/: pch.hpp
include/core/: Atom.hpp  CallbackManager.hpp  Vision.hpp  Window.hpp
include/renderer/: Mesh.hpp  Shader.hpp  Textures.hpp  Vertex.hpp
res/shaders/: vertex_shader.glsl  vertex_shader_bg.glsl
src/core/: Atom.cpp  Vision.cpp  Window.cpp
src/renderer/: Mesh.cpp  Shader.cpp  Texture.cpp  Vertex.cpp
